working on mobile display version; (need to fix hero, scroll height from buttons, pricing, join private beta, and donut tags on web version)

--- a/frontend/src/input.css
+++ b/frontend/src/input.css
@@ -43,12 +43,12 @@ input[type=range]::-webkit-slider-runnable-track {
 
 input[type=range]::-webkit-slider-thumb {
   -webkit-appearance: none;
-  height: 20px;
-  width: 20px;
+  height: 28px;
+  width: 28px;
   border-radius: 50%;
   background: #135bec !important;
   cursor: pointer;
-  margin-top: -8px;
+  margin-top: -12px;
   box-shadow: 0 2px 6px rgba(19, 91, 236, 0.4);
   border: none;
 }
@@ -62,8 +62,8 @@ input[type=range]::-moz-range-track {
 }
 
 input[type=range]::-moz-range-thumb {
-  height: 20px;
-  width: 20px;
+  height: 28px;
+  width: 28px;
   border-radius: 50%;
   background: #135bec !important;
   cursor: pointer;
